overflow-y issues

--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -25,10 +25,3 @@
 		width: 100%;
 	}
 }
-
-.site-wrapper {
-  height: 100%;
-  overflow-x: hidden;
-  position: relative;
-  width: 100%;
-}
